--- a/skills.html
+++ b/skills.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width" />
     <title>Skiils | Simranjeet Singh</title>
 
-    <link rel="icon" href="svgs/icon.png" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/icon.png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
-    <link type="text/css" media="all" href="style.css" rel="stylesheet" />
+    <link type="text/css" media="all" href="css/style.css" rel="stylesheet" />
     <style>
       @media (min-height: 569px) and (max-width: 767px) {
         .home-page h1:after {
@@ -23,7 +26,11 @@
   <body>
     <div id="nav-bar">
       <a href="https://smrnjeet222.github.io/Portfolio/">
-        <img class="logo" src="svgs/home.png" alt="logo" />
+        <img
+          class="logo"
+          src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/home.png"
+          alt="logo"
+        />
       </a>
       <nav>
         <a href="/" class="link"
@@ -76,7 +83,10 @@
       </ul>
     </div>
     <a class="bkmrk" href="/Resume.html">
-      <img src="svgs/blogdark.png" alt="Resume" />
+      <img
+        src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/blogdark.png"
+        alt="Resume"
+      />
       <span class="folded-corner"></span>
     </a>
     <div class="container home-page">
@@ -103,7 +113,7 @@
             style="color: #23ffde;"
             >LinkedIn </a
           >profile for more details or just
-          <a href="/contact.html" style="color: #23ffde;">contact </a>me.
+          <a href="/contact" style="color: #23ffde;">contact </a>me.
         </p>
       </div>
 
@@ -123,7 +133,7 @@
           return Math.floor(Math.random() * (max - min)) + min; // The maximum is exclusive and the minimum is inclusive
         }
         document.write(
-          '<div id="mysvg"><img alt="hacker" src="svgs/code' +
+          '<div id="mysvg"><img alt="hacker" src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/code' +
             getRandomInt(1, 8) +
             '.svg"></div>'
         );
