--- a/work.html
+++ b/work.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width" />
     <title>Projects | Simranjeet Singh</title>
 
-    <link rel="icon" href="svgs/icon.png" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/icon.png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
-    <link type="text/css" media="all" href="work.css" rel="stylesheet" />
+    <link type="text/css" media="all" href="css/work.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gloria Hallelujah"
@@ -20,7 +23,11 @@
   <body>
     <div id="nav-bar">
       <a href="https://smrnjeet222.github.io/Portfolio/">
-        <img class="logo" src="svgs/home.png" alt="logo" />
+        <img
+          class="logo"
+          src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/home.png"
+          alt="logo"
+        />
       </a>
       <nav>
         <a href="/" class="link"
@@ -73,14 +80,20 @@
       </ul>
     </div>
     <a class="bkmrk" href="/Resume.html">
-      <img src="svgs/blogdark.png" alt="Resume" />
+      <img
+        src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/blogdark.png"
+        alt="Resume"
+      />
       <span class="folded-corner"></span>
     </a>
 
     <div class="container">
       <div class="gallery">
         <div class="box">
-          <img src="svgs/recipe.jpg" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/recipe.jpg"
+            class="image"
+          />
           <a href="#" class="prj"> Recipe App<span> . js</span> </a>
           <a href="https://github.com/smrnjeet222/recipe-app" class="show1"
             >Github</a
@@ -90,7 +103,10 @@
           >
         </div>
         <div class="box">
-          <img src="svgs/blog.jpg" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/blog.jpg"
+            class="image"
+          />
           <a class="prj"> Django Blog<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/Django_Blog" class="show1"
             >Github</a
@@ -99,7 +115,10 @@
         </div>
 
         <div class="box">
-          <img src="svgs/portfolio.png" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/portfolio.png"
+            class="image"
+          />
           <a class="prj"> Old Portfolio<span> . js</span> </a>
           <a href="https://github.com/smrnjeet222/Portfolio" class="show1"
             >Github</a
@@ -126,7 +145,10 @@
           >
         </div>
         <div class="box">
-          <img src="svgs/Automail.png" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/Automail.png"
+            class="image"
+          />
           <a class="prj"> AutoMail<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/AutoMail" class="show1"
             >Github</a
@@ -189,7 +211,7 @@
 
         <div class="box">
           <img
-            src="https://raw.githubusercontent.com/smrnjeet222/Visualisations/master/Astar.png"
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/Astar.png"
             class="image"
           />
           <a class="prj"> A*Pathfinding<span> . py</span> </a>
@@ -219,7 +241,10 @@
         </div>
 
         <div class="box">
-          <img src="svgs/Rc.png" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/Rc.png"
+            class="image"
+          />
           <a class="prj"> Ray Casting<span> . js</span> </a>
           <a
             href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
@@ -233,7 +258,10 @@
           >
         </div>
         <div class="box">
-          <img src="svgs/covid.png" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/covid.png"
+            class="image"
+          />
           <a class="prj"> Python Apps<span> . py</span> </a>
           <a href="https://github.com/smrnjeet222/Python_Apps" class="show1"
             >Github</a
@@ -243,7 +271,10 @@
           >
         </div>
         <div class="box">
-          <img src="svgs/bubblesort.png" class="image" />
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/bubblesort.png"
+            class="image"
+          />
           <a class="prj"> Visualisations<span> . js</span> </a>
           <a
             href="https://editor.p5js.org/smrnjeet222/collections/fvtHa48dt"
