--- a/Resume.html
+++ b/Resume.html
@@ -20,7 +20,7 @@
     <!-- <link rel="icon" type="image/png"
         href="https://cdn.resume.io/assets/favicon-380f2b70900971f039456393c39317a2a54e21a4abae00fd730eee0d6ee1a953.png"
         sizes="16x16" /> -->
-    <link rel="icon" type="" href="img/resume.png" sizes="32x32" />
+    <link rel="icon" type="" href="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/resume.png" sizes="32x32" />
     <meta name="csrf-param" content="authenticity_token" />
     <meta
       name="csrf-token"
