--- a/about.html
+++ b/about.html
@@ -6,17 +6,24 @@
     <meta name="viewport" content="width=device-width" />
     <title>About | Simranjeet Singh</title>
 
-    <link rel="icon" href="svgs/icon.png" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/icon.png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
-    <link type="text/css" media="all" href="style.css" rel="stylesheet" />
+    <link type="text/css" media="all" href="css/style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="nav-bar">
       <a href="https://smrnjeet222.github.io/Portfolio/">
-        <img class="logo" src="svgs/home.png" alt="logo" />
+        <img
+          class="logo"
+          src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/home.png"
+          alt="logo"
+        />
       </a>
       <nav>
         <a href="/" class="link"
@@ -69,7 +76,10 @@
       </ul>
     </div>
     <a class="bkmrk" href="/Resume.html">
-      <img src="svgs/blogdark.png" alt="Resume" />
+      <img
+        src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/blogdark.png"
+        alt="Resume"
+      />
       <span class="folded-corner"></span>
     </a>
     <div class="container home-page">
@@ -100,7 +110,7 @@
             style="color: #23ffde;"
             >Instagram </a
           >to know more or just
-          <a href="/contact.html" style="color: #23ffde;">contact </a>me.
+          <a href="/contact" style="color: #23ffde;">contact </a>me.
         </p>
       </div>
       <span class="tags bottom-tags" style="bottom: 10px;">
@@ -116,7 +126,7 @@
           return Math.floor(Math.random() * (max - min)) + min; // The maximum is exclusive and the minimum is inclusive
         }
         document.write(
-          '<div id="mysvg"><img alt="hacker" src="svgs/code' +
+          '<div id="mysvg"><img alt="hacker" src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/code' +
             getRandomInt(1, 8) +
             '.svg"></div>'
         );
