--- a/work.html
+++ b/work.html
@@ -104,6 +104,17 @@
         </div>
         <div class="box">
           <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/pg.png"
+            class="image"
+          />
+          <a href="#" class="prj"> Pico-Gram<span> . js</span> </a>
+          <a href="https://github.com/smrnjeet222/PicoGram" class="show1"
+            >Github</a
+          >
+          <a href="https://smrnjeet-picogram.web.app/" class="show2">Visit</a>
+        </div>
+        <div class="box">
+          <img
             src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/blog.jpg"
             class="image"
           />
@@ -222,6 +233,20 @@
             >Visit</a
           >
         </div>
+        <div class="box">
+          <img
+            src="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/todo.png"
+            class="image"
+          />
+          <a class="prj"> React Todo <span> . js</span> </a>
+          <a href="https://smrnjeet222.github.io/ReactApps/" class="show1"
+            >Github</a
+          >
+          <a href="https://github.com/smrnjeet222/ReactApps" class="show2"
+            >Visit</a
+          >
+        </div>
+
         <div class="box">
           <img
             src="https://raw.githubusercontent.com/smrnjeet222/Python_Apps/master/Rock-Paper-Scissors/demo.jpg"
