--- a/work.html
+++ b/work.html
@@ -68,13 +68,13 @@
           ></a>
         </li>
         <li>
-          <a href="https://twitter.com/Att_Sardar_ji" target="_blank"
-            ><i class="fab fa-twitter"></i
+          <a href="https://www.reddit.com/user/smrnjeet_22" target="_blank"
+            ><i class="fab fa-reddit-alien"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.facebook.com/smrnjeet222" target="_blank"
-            ><i class="fab fa-facebook"></i
+          <a href="https://twitter.com/Att_Sardar_ji" target="_blank"
+            ><i class="fab fa-twitter"></i
           ></a>
         </li>
       </ul>
