--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
           ></a>
         </li>
         <li>
-          <a href="https://twitter.com/Att_Sardar_ji" target="_blank"
-            ><i class="fab fa-twitter"></i
+          <a href="https://www.reddit.com/user/smrnjeet_22" target="_blank"
+            ><i class="fab fa-reddit-alien"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.facebook.com/smrnjeet222" target="_blank"
-            ><i class="fab fa-facebook"></i
+          <a href="https://twitter.com/Att_Sardar_ji" target="_blank"
+            ><i class="fab fa-twitter"></i
           ></a>
         </li>
       </ul>
@@ -86,36 +86,36 @@
       <span class="tags top-tags"> &nbsp;&nbsp;&nbsp;&lt;body&gt;</span>
       <div class="text-zone">
         <h1 aria-label=" Hi, I’m Simranjeet,web developer." class="blast-root">
-          <span class="blast" style="opacity: 1;">H</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">I</span
-          ><span class="blast" style="opacity: 1;">’</span
-          ><span class="blast" style="opacity: 1;">m</span>
-          <span class="Slast" style="opacity: 1;">S</span
-          ><span class="blast" style="opacity: 1;">i</span
-          ><span class="blast" style="opacity: 1;">m</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">a</span
-          ><span class="blast" style="opacity: 1;">n</span
-          ><span class="blast" style="opacity: 1; padding-left: 3px;">j</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">t</span
-          ><span class="blast" style="opacity: 1;">,</span><br />
-          <span class="blast" style="opacity: 1;">w</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">b</span>
-          <span class="blast" style="opacity: 1;">d</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">v</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">l</span
-          ><span class="blast" style="opacity: 1;">o</span
-          ><span class="blast" style="opacity: 1;">p</span
-          ><span class="blast" style="opacity: 1;">e</span
-          ><span class="blast" style="opacity: 1;">r</span
-          ><span class="blast" style="opacity: 1;">.</span>
+          <span class="blast" style="opacity: 1">H</span
+          ><span class="blast" style="opacity: 1">i</span
+          ><span class="blast" style="opacity: 1">,</span><br />
+          <span class="blast" style="opacity: 1">I</span
+          ><span class="blast" style="opacity: 1">’</span
+          ><span class="blast" style="opacity: 1">m</span>
+          <span class="Slast" style="opacity: 1">S</span
+          ><span class="blast" style="opacity: 1">i</span
+          ><span class="blast" style="opacity: 1">m</span
+          ><span class="blast" style="opacity: 1">r</span
+          ><span class="blast" style="opacity: 1">a</span
+          ><span class="blast" style="opacity: 1">n</span
+          ><span class="blast" style="opacity: 1; padding-left: 3px">j</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">t</span
+          ><span class="blast" style="opacity: 1">,</span><br />
+          <span class="blast" style="opacity: 1">w</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">b</span>
+          <span class="blast" style="opacity: 1">d</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">v</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">l</span
+          ><span class="blast" style="opacity: 1">o</span
+          ><span class="blast" style="opacity: 1">p</span
+          ><span class="blast" style="opacity: 1">e</span
+          ><span class="blast" style="opacity: 1">r</span
+          ><span class="blast" style="opacity: 1">.</span>
         </h1>
         <h2>Full Stack Developer / Python Programmer / Freelancer</h2>
         <div class="icons">
