--- a/work.html
+++ b/work.html
@@ -226,10 +226,12 @@
             class="image"
           />
           <a class="prj"> A*Pathfinding<span> . py</span> </a>
-          <a href="https://github.com/smrnjeet222/Visualisations" class="show1"
+          <a
+            href="https://github.com/smrnjeet222/Python_Apps/tree/master/A-star"
+            class="show1"
             >Github</a
           >
-          <a href="https://github.com/smrnjeet222/Visualisations" class="show2"
+          <a href="https://repl.it/@smrnjeet222/Astar#main.py" class="show2"
             >Visit</a
           >
         </div>
