--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       href="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/icon.png"
     />
     <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Gloria Hallelujah"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
