--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, React, Portfolio, smrnjeet222">
+    <meta property="og:type" content="Portfolio" />
+    <meta name="author" property="og:title" content="Simranjeet Singh">
+    <meta name="description" property="og:description" content="Hi I am	Simranjeet Singh || Full Stack Developer | Python Developer ">
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/port.png">
     <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
 
     <link
