--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React, Portfolio, smrnjeet222">
     <meta property="og:type" content="Portfolio" />
     <meta name="author" property="og:title" content="Simranjeet Singh">
-    <meta name="description" property="og:description" content="Hi I am	Simranjeet Singh || Full Stack Developer | Python Developer ">
+    <meta name="description" property="og:description" content="Hi I am	Simranjeet Singh || Full Stack Developer | Blockchain Developer ">
     <meta name="image" property="og:image" content="https://raw.githubusercontent.com/smrnjeet222/smrnjeet222/master/assets/port.png">
     <title>Simranjeet Singh | Full Stack Developer | Python Developer</title>
 
